--- a/frontend/thankyou.html
+++ b/frontend/thankyou.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="content-type" charset="utf-8">
         <!-- bootstrap icons -->
+        <title>Wedding Invitation</title>
         
         <!-- Local style sheet relative to workspace folder -->
         <link rel="stylesheet" href="css/thankyou.css">
@@ -18,11 +19,16 @@
             <div class="thankyou-message-area">
                 <div>
                     <p>
-                        ご回答受け付けました<br>
-                        ありがとうございます
+                        ご回答ありがとうございました！<br>
                     </p>
                 </div>
             </div>
+            <div class="" style="text-align: center;">
+                <img src="image/name.jpg" alt="" style="width:60%;">
+                <div class="" style="height: 50px;"></div>
+                <a href="/">招待状トップ ></a>
+            </div>
+
         </div>
         <!-- Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
