--- a/frontend/top.html
+++ b/frontend/top.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
         <meta http-equiv="content-type" charset="utf-8">
         <!-- bootstrap icons -->
+        <title>Wedding Invitation</title>
         
         <!-- Local style sheet relative to workspace folder -->
         <link rel="stylesheet" href="css/top.css">
