Revert "画像差し替え"
This reverts commit 84eac67ba14d4159d176beaab93acb5d71e0ebb9.

--- a/frontend/top.html
+++ b/frontend/top.html
@@ -23,9 +23,9 @@
         <div class="outside-container">
             <div class="container-main" id="container">
                 <div class="top-image-container">
-                    <img class="top-image" src="image/pre-shoot1_2.jpg" />
-                    <img class="top-image" src="image/pre-shoot2.jpg" />
-                    <img class="top-image" src="image/pre-shoot3_1.jpg" />
+                    <img class="top-image" src="image/oita_1.jpg" />
+                    <img class="top-image" src="image/ring_1.jpg" />
+                    <img class="top-image" src="image/eriko_2.jpg" />
                     <p class="top-image-title">Wedding</p>
                     <p class="top-image-sub-title">Invitation</p>
                 </div>
@@ -76,7 +76,7 @@
                     <p class="text-center font-size-7 bold-writing" style="margin: 20px 0;">BRIDE</p>
                     <div class="bride-area">
                         <div class="self-picture">
-                            <img class="self-picture" src="image/eriko_bride_5.jpg" alt="">
+                            <img class="self-picture" src="image/eriko_2.jpg" alt="">
                         </div>
                         <div class="self-text">
                             <p class="text-center font-size-15px">浜辺　恵理子</p>
